Added some styles for layout

--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -1,4 +1,12 @@
-<h1>Listing Jobs I applied for:</h1>
+<div class="container">
+<header>
+  <h1>Jobby Job Hunting</h1>
+</header>
+<section class="content">
+<h2>Listing Jobs I applied for:</h2>
+
 <% @jobs.each do |job| %>
  <%= link_to job.company, job %> <br>
 <% end %>
+  </section>
+</div>
