--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -1,9 +1,16 @@
-<h1>Editing Job</h1>
-<%= form_for(@job) do |f| %>
-  <%= f.text_field :company %> <br>
-  <%= f.text_field :contact %> <br>
-  <%= f.text_field :phone %> <br>
-  <%= f.text_field :location %> <br>
-  <%= f.text_area :notes %> <br>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <header>
+    <h1>Editing Job</h1>
+  </header>
+  <section class="content">
+    <%= form_for(@job) do |f| %>
+      <%= f.text_field :company %> <br>
+      <%= f.text_field :contact %> <br>
+      <%= f.text_field :phone %> <br>
+      <%= f.text_field :location %> <br>
+      <%= f.text_area :notes %> <br>
+      <%= f.submit %>
+    <% end %>
+    <%= link_to 'Cancel', root_path %>
+  </section>
+</div>
