Added a field job_title and updated views with some style

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -3,6 +3,7 @@
 <%= f.text_field :contact, :placeholder => "Contact" %> <br>
 <%= f.text_field :phone, :placeholder => "Phone Number" %> <br>
 <%= f.text_field :location, :placeholder => "Location" %> <br>
+<%= f.text_field :job_title, :placeholder => "Job Title" %> <br>
 <%= f.text_area :notes, :placeholder => "Notes" %> <br>
  <%= f.submit %>
 <% end %>
