--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -9,6 +9,7 @@
     Phone: <%= @jobs.phone %> <br>
     Contact: <%= @jobs.contact %> <br>
     Location: <%= @jobs.location %> <br>
+    Job Title: <%= @jobs.job_title %> <br>
     Notes: <%= @jobs.notes %>
     <br><br>
     <%= link_to 'Edit Job', edit_job_path(@job) %>
