--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -8,5 +8,22 @@ header {
 }
 
 .content {
+  font-size: 25px;
+}
 
+.content h2 {
+  color: #444;
+}
+
+.content a:link {
+  color: #FF8E51;
+  text-decoration: none;
+}
+
+.content a:visited {
+  color: #FF8E51;
+}
+
+.content a:hover {
+  color: #444;
 }
