--- a/app/views/jobs/edit.html.erb
+++ b/app/views/jobs/edit.html.erb
@@ -8,6 +8,7 @@
       <%= f.text_field :contact %> <br>
       <%= f.text_field :phone %> <br>
       <%= f.text_field :location %> <br>
+      <%= f.text_field :job_title %> <br>
       <%= f.text_area :notes %> <br>
       <%= f.submit %>
     <% end %>
