--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -13,7 +13,8 @@
     Notes: <%= @jobs.notes %>
     <br><br>
     <%= link_to 'Edit Job', edit_job_path(@job) %>
-    <%= link_to "Delete",  job_path(@job), method: :delete, data: { confirm: "Are you sure?" } %>
+    <!--delete worked then suddenly stopped, will test later -->
+    <%= link_to "Delete", job_path(@job), method: :delete, data: { confirm: "Are you sure?" } %>
     <%= link_to 'Back to Job List', root_path %>
   </section>
 </div>
