added link styles added a link on new view

--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
 <h1>New Job</h1>
-<%= render "form" %>
+<%= render "form" %><br>
+<%= link_to 'Cancel', root_path %>
 </div>
