--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -1,3 +1,17 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+
+a:visted {
+  color: #FF8E51;
+}
+
+a:link {
+  color: #FF8E51;
+  text-decoration: none;
+}
+a:hover {
+  color: #333;
+}
+
 .container {
   width: 960px;
   margin: 0 auto;
@@ -7,11 +21,16 @@ header {
  color: #333;
 }
 
+header h1 {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .content {
   font-size: 25px;
 }
 
-.content h2 {
+.content h1,h2,h3 {
+  font-family: 'Open Sans', sans-serif;
   color: #444;
 }
 
